# RustyEngine

./: .gitignore  ARCHITECTURE_ANALYSIS.md  COMPARISON_ANALYSIS.md  CONFIG_SETUP.md  Cargo.toml  EXECUTIVE_SUMMARY.md  IMPROVEMENT_PLAN.md  INDEX.md  QUICK_START.md  README.md  README_ANALYSIS.md  SUMMARY_REPORT.md  TODO.md  VERIFICATION_COMPLETE.md
.github/workflows/: rust.yml
src/: main.rs  renderer.rs
src/audio/: audio.rs  backend.rs  error.rs  mod.rs  rodio_backend.rs  sound.rs  sound_group.rs  system.rs
src/backend/: backend.rs  mod.rs  surface_provider.rs  window.rs  window_backend.rs  winit_backend.rs
src/core/: callbacks.rs  color.rs  engine.rs  engine_state.rs  event_handler.rs  events.rs  id.rs  input.rs  mod.rs  render_context.rs  sprite.rs  vertex.rs  window_config.rs
src/core/assets/: cache.rs  error.rs  font.rs  id.rs  image.rs  manager.rs  mod.rs  sound_tracking.rs  spritesheet.rs
src/core/assets/cache/: mod.rs  path.rs  store.rs
src/core/events/: actions.rs  callbacks.rs  event_handler.rs  events.rs  input.rs  input_events.rs  mod.rs
src/game/: mod.rs
src/game/demos/: actions_demo.rs  asset_cache.rs  font.rs  mod.rs  showcase.rs  sprite.rs  template.rs
src/graphics/: animated_sprite.rs  animation.rs  mod.rs  sprite.rs  text.rs
src/math/: color.rs  mod.rs  transform.rs  vec2.rs
src/render/: context.rs  mod.rs  renderer.rs  sprite_data.rs  wgpu_renderer.rs
src/render/shapes/: circle.rs  ellipse.rs  line.rs  mod.rs  polygon.rs  polyline.rs  rectangle.rs  shape_ref.rs  traits.rs  transform.rs  triangle.rs
(+14 files in other folders)
