[package]
name = "RustyEngine"
version = "0.1.0"
edition = "2024"
homepage = "https://github.com/Jeremis70/RustyEngine"
repository = "https://github.com/Jeremis70/RustyEngine"
authors = ["Jérémie Caron"]
readme = "README.md"
license = "LGPL-3.0-or-later"
description = "A high-level, Rust-based game engine with a flexible renderer, audio system, and asset management, designed for power users."
keywords = ["game-engine", "gamedev", "wgpu", "winit", "audio"]
categories = ["game-development", "graphics"]

[dependencies]
wgpu = "27.0.1"
winit = "0.30.12"
thiserror = "2.0.17"
log = "0.4.29"
env_logger = "0.11.8"
pollster = "0.4.0"
raw-window-handle = "0.6.2"
bytemuck = { version = "1.20", features = ["derive"] }
rodio = "0.21.1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp"] }
fontdue = "0.9.3"
